--- a/application/admin/view/system/base_info.html
+++ b/application/admin/view/system/base_info.html
@@ -2,36 +2,55 @@
 {block name="content"}
 <body>
 <div class="layui-fluid">
-    <div class="layui-row layui-col-space15">
-        <div class="layui-col-md12 webody">
-        <div class="layui-card">
+    <!--<div class="layui-row layui-col-space15">-->
+        <!--<div class="layui-col-md12 webody">-->
+        <!--<div class="layui-card">-->
             <!--<div class="layui-card-header">-->
-                <fieldset class="layui-elem-field layui-field-title">
-                    <legend> 系统基本信息</legend>
-                </fieldset>
+                <!--<fieldset class="layui-elem-field layui-field-title">-->
+                    <!--<legend> 系统基本信息</legend>-->
+                <!--</fieldset>-->
             <!--</div>-->
-            <div class="layui-card-body">
-                <div class="layui-tab layui-tab-brief" lay-filter="component-tabs-brief">
-                    <ul class="layui-tab-title">
-                        <li class="layui-this">系统信息</li>
-                        <li class="">技术团队</li>
+            <!--<div class="layui-card-body">-->
+                <div class="" lay-filter="component-tabs-brief">
+                    <ul class="tabpage" id="tabs">
+                        <li class="" id="li1"><a href="#" class="tab1">系统信息</a></li>
+                        <li class="" id="li2"><a href="#" class="tab2">技术团队</a></li>
                     </ul>
-                    <div class="layui-tab-content">
-                        <div class="layui-tab-item layui-show">
-                            {volist name="server_info" id="vo"}
-                                <li>{$system_info[$key]}：&nbsp;&nbsp;<span>{$vo}</span></li>
-                            {/volist}
+                    <div class="contenttab" id="content">
+                        <div class="layui-tab-item" id="tab1">
+                            <table class="layui-table" lay-skin="line" lay-size="sm">
+                                <colgroup>
+                                    <col class="tdleft" width="20%">
+                                    <col class="tdright">
+                                </colgroup>
+                                <tbody>
+                                    {volist name="server_info" id="vo"}
+                                    <tr>
+                                    <td class="tdleft">{$system_info[$key]}</td><td class="tdright">{$vo}</td>
+                                    </tr>
+                                    {/volist}
+                                </tbody>
+                            </table>
                         </div>
-                        <div class="layui-tab-item">
-                            Mr Qin
+                        <div class="layui-tab-item" id="tab2">
+                            <table class="layui-table" lay-skin="line" lay-size="sm">
+                                <colgroup>
+                                    <col class="tdright">
+                                </colgroup>
+                                <tbody>
+                                <tr>
+                                    <td class="tdright">Mr Qin</td>
+                                </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        </div>
-    </div>
-</div>
+        <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
 
 {/block}
 
