--- a/application/admin/view/auth/admin/edit.html
+++ b/application/admin/view/auth/admin/edit.html
@@ -1,54 +1,61 @@
 {extend name="layout/default" /}
 {block name="content"}
 <body>
-<div class="layui-container lay_top">
-    <div class="layui-row layui-col-space30">
-        <div class="layui-col-xs12">
+<!--<div class="layui-container lay_top">-->
+    <!--<div class="layui-row layui-col-space30">-->
+        <div class="body-form">
         <form class="layui-form" action="{:url('admin/auth.admin/edit','',false)}" tableid="tableReload" method="post" id="formRule" lay-filter="rule">
-            <div class="layui-form-item ">
-                <label class="layui-form-label">角色</label>
-                <div class="layui-input-block">
-                    {:build_select('group', $groupdata, $groupids, ['class'=>'form-control selectpicker', 'multiple'=>'', 'lay-verify'=>'required', 'xm-select' => 'select'])}
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">登录账号</label>
-                <div class="layui-input-block">
-                    <input type="text" name="username" autocomplete="off" value="{$list['username']}" data-rule="required;username" placeholder="登录账号" class="layui-input">
-                    <input type="hidden" name="id" lay-verify="id" value="{$list['id']}">
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">昵称</label>
-                <div class="layui-input-block">
-                    <input type="nickname" name="nickname" placeholder="昵称" value="{$list['nickname']}" data-rule="required" autocomplete="off" class="layui-input">
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">邮箱</label>
-                <div class="layui-input-block">
-                    <input type="email" name="email" placeholder="邮箱" value="{$list['email']}" autocomplete="off" data-rule="{required;email}" class="layui-input">
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">密码</label>
-                <div class="layui-input-block">
-                    <input type="password" data-rule="passwdrule" data-rule-passwdrule="[/{$passwd_complexity_rule[0]}/, '{$passwd_complexity_rule[1]}']" name="password" placeholder="密码" autocomplete="off" class="layui-input">
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">确认密码</label>
-                <div class="layui-input-block">
-                    <input type="password" name="confirm_password" data-rule="{:__('Confirm password')}:match(password);" placeholder="确认密码"  autocomplete="off" class="layui-input">
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">状态</label>
-                <div class="layui-input-block">
-                    <input type="checkbox" name="status" lay-skin="switch" lay-text="启用|禁止"  {$list['status'] == 1? 'checked' : ''}>
-                </div>
-            </div>
-
+            <table class="layui-table" lay-skin="line" lay-size="sm">
+                <colgroup>
+                    <col class="tdleft" width="30%">
+                    <col class="tdright">
+                </colgroup>
+                <tbody>
+                <tr>
+                    <td class="tdleft">角色<span class="tips">*</span></td>
+                    <td class="tdright">
+                        {:build_select('group', $groupdata, $groupids, ['class'=>'form-control selectpicker', 'multiple'=>'', 'lay-verify'=>'required', 'xm-select' => 'select'])}
+                    </td>
+                </tr>
+                <tr>
+                    <td class="tdleft">登录账号<span class="tips">*</span></td>
+                    <td class="tdright">
+                        <input type="text" name="username" data-rule="required;username" lay-verify="username" autocomplete="off" value="{$list['username']}" placeholder="登录账号" class="layui-input">
+                        <input type="hidden" name="id" lay-verify="id" value="{$list['id']}">
+                    </td>
+                </tr>
+                <tr>
+                    <td class="tdleft">昵称</td>
+                    <td class="tdright">
+                        <input type="nickname" data-rule="required" name="nickname" placeholder="昵称" value="{$list['nickname']}" autocomplete="off" class="layui-input">
+                    </td>
+                </tr>
+                <tr>
+                    <td class="tdleft">邮箱</td>
+                    <td class="tdright">
+                        <input type="email" name="email" data-rule="{required;email}" placeholder="邮箱" value="{$list['email']}" autocomplete="off" class="layui-input">
+                    </td>
+                </tr>
+                <tr>
+                    <td class="tdleft">密码</td>
+                    <td class="tdright">
+                        <input type="password" data-rule="passwdrule" data-rule-passwdrule="[/{$passwd_complexity_rule[0]}/, '{$passwd_complexity_rule[1]}']" name="password" placeholder="密码" autocomplete="off" class="layui-input">
+                    </td>
+                </tr>
+                <tr>
+                    <td class="tdleft">确认密码</td>
+                    <td class="tdright">
+                        <input type="password" name="confirm_password" data-rule="{:__('Confirm password')}:match(password);" placeholder="确认密码"  autocomplete="off" class="layui-input">
+                    </td>
+                </tr>
+                <tr>
+                    <td class="tdleft">状态</td>
+                    <td class="tdright">
+                        <input type="checkbox" name="status" lay-skin="switch" lay-text="启用|禁止"  {$list['status'] == 1? 'checked' : ''}>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
             <div class="layui-form-item footer-form">
                 <div class="footer">
                     <button type="submit" lay-submit="" lay-filter="formRule" class="layui-btn layui-btn-sm btn-embossed disabled">{:__('OK')}</button>
@@ -57,8 +64,8 @@
             </div>
         </form>
         </div>
-    </div>
-</div>
+    <!--</div>-->
+<!--</div>-->
 {/block}
 {block name="script"}
 <script>
