--- a/application/admin/view/auth/rule/edit.html
+++ b/application/admin/view/auth/rule/edit.html
@@ -1,66 +1,73 @@
 {extend name="layout/default" /}
 {block name="content"}
 <body>
-<div class="layui-container lay_top">
-    <div class="layui-row layui-col-space30">
-        <div class="layui-col-xs12">
+<!--<div class="layui-container lay_top">-->
+    <!--<div class="layui-row layui-col-space30">-->
+        <div class="body-form">
         <form class="layui-form" action="{:url('admin/auth.rule/edit','',false)}" tableid="tableReload" treegird="true" method="post" lay-filter="rule" id="formRule">
-            <div class="layui-form-item">
-                <label class="layui-form-label">菜单</label>
-                <div class="layui-input-block">
-                    <input type="checkbox" name="ismenu" lay-skin="switch" lay-text="是|否" {$list['ismenu'] == 1? 'checked' : ''}>
-                    <input type="hidden" name="id" value="{$list['id']}">
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">父级</label>
-                <div class="layui-input-block">
-                    {:build_select('pid', $ruledata, $list['pid'], ['class'=>'form-control', 'required'=>''])}
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">规则</label>
-                <div class="layui-input-block">
-                    <input type="text" name="name" data-rule="required;" autocomplete="off" value="{$list['name']}" placeholder="规则名称" class="layui-input">
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">标题</label>
-                <div class="layui-input-block">
-                    <input type="title" name="title"  data-rule="required" placeholder="标题" value="{$list['title']}" autocomplete="off" class="layui-input">
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">图标</label>
-                <div class="layui-input-block">
-                    <input type="icon" name="icon" placeholder="图标" value="{$list['icon']}" autocomplete="off" class="layui-input">
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">权重</label>
-                <div class="layui-input-block">
-                    <input type="weigh" name="weigh" data-rule="required;integer(+0)" placeholder="权重" value="{$list['weigh']}" autocomplete="off" class="layui-input">
-                </div>
-            </div>
-            <div class="layui-form-item layui-form-text">
-                <label class="layui-form-label">规则条件</label>
-                <div class="layui-input-block">
-                    <textarea placeholder="规则条件" class="layui-textarea" name="condition" rows="3">{$list['condition']}</textarea>
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">状态</label>
-                <div class="layui-input-block">
-                    <input type="checkbox" name="status" lay-skin="switch" lay-text="启用|禁止"  {$list['status'] == 1? 'checked' : ''}>
-                </div>
-            </div>
-            <div class="layui-form-item layui-form-text">
-                <label class="layui-form-label">备注</label>
-                <div class="layui-input-block">
-                    <textarea placeholder="备注" class="layui-textarea" name="remark">{$list['remark']}</textarea>
-                </div>
-            </div>
-
+            <table class="layui-table" lay-skin="line" lay-size="sm">
+                <colgroup>
+                    <col class="tdleft" width="30%">
+                    <col class="tdright">
+                </colgroup>
+                <tbody>
+                <tr>
+                    <td class="tdleft">菜单<span class="tips">*</span></td>
+                    <td class="tdright">
+                        <input type="checkbox" name="ismenu" lay-skin="switch" lay-text="是|否" {$list['ismenu'] == 1? 'checked' : ''}>
+                        <input type="hidden" name="id" value="{$list['id']}">
+                    </td>
+                </tr>
+                <tr>
+                    <td class="tdleft">父级</td>
+                    <td class="tdright">
+                        {:build_select('pid', $ruledata, $list['pid'], ['class'=>'form-control', 'required'=>''])}
+                    </td>
+                </tr>
+                <tr>
+                    <td class="tdleft">规则</td>
+                    <td class="tdright">
+                        <input type="text" name="name" data-rule="required;" autocomplete="off" value="{$list['name']}" placeholder="规则名称" class="layui-input">
+                    </td>
+                </tr>
+                <tr>
+                    <td class="tdleft">标题</td>
+                    <td class="tdright">
+                        <input type="title" name="title"  data-rule="required" placeholder="标题" value="{$list['title']}" autocomplete="off" class="layui-input">
+                    </td>
+                </tr>
+                <tr>
+                    <td class="tdleft">图标</td>
+                    <td class="tdright">
+                        <input type="icon" name="icon" placeholder="图标" value="{$list['icon']}" autocomplete="off" class="layui-input">
+                    </td>
+                </tr>
+                <tr>
+                    <td class="tdleft">权重</td>
+                    <td class="tdright">
+                        <input type="weigh" name="weigh" data-rule="required;integer(+0)" placeholder="权重" value="{$list['weigh']}" autocomplete="off" class="layui-input">
+                    </td>
+                </tr>
+                <tr>
+                    <td class="tdleft">规则条件</td>
+                    <td class="tdright">
+                        <textarea placeholder="规则条件" class="layui-textarea" name="condition" rows="3">{$list['condition']}</textarea>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="tdleft">状态</td>
+                    <td class="tdright">
+                        <input type="checkbox" name="status" lay-skin="switch" lay-text="启用|禁止"  {$list['status'] == 1? 'checked' : ''}>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="tdleft">备注</td>
+                    <td class="tdright">
+                        <textarea placeholder="备注" class="layui-textarea" name="remark">{$list['remark']}</textarea>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
             <div class="layui-form-item footer-form">
                 <div class="footer">
                     <button type="submit" lay-submit="" lay-filter="formRule" class="layui-btn layui-btn-sm btn-embossed disabled">{:__('OK')}</button>
@@ -69,8 +76,8 @@
             </div>
         </form>
         </div>
-    </div>
-</div>
+    <!--</div>-->
+<!--</div>-->
 {/block}
 {block name="script"}
 <script>
