--- a/application/admin/view/profile/index.html
+++ b/application/admin/view/profile/index.html
@@ -1,61 +1,107 @@
 {extend name="layout/default" /}
 {block name="content"}
 <body>
-<div class="layui-fluid">
-    <div class="layui-row layui-col-space15">
-        <div class="layui-col-md12 webody">
-        <div class="layui-card">
-            <div class="layui-card-body">
+<!--<div class="layui-fluid">-->
+    <!--<div class="layui-row layui-col-space15">-->
+        <!--<div class="layui-col-md12 webody">-->
+        <!--<div class="layui-card">-->
+            <div class="body-form">
                 <form class="layui-form" action="{:url('admin/profile/update','',false)}" tableid="tableReload" method="post" id="formRule" lay-filter="rule">
-                    <div class="layui-form-item layui-col-md6 layui-col-md-offset3">
-                        <label class="layui-form-label">登录账号</label>
-                        <div class="layui-input-block">
-                            <input type="text" name="username" autocomplete="off" value="{$admin.username}" data-rule="required;username" placeholder="登录账号" class="layui-input">
-                            <input type="hidden" name="id" lay-verify="id" value="{$admin.id}">
-                        </div>
-                    </div>
-                    <div class="layui-form-item layui-col-md6 layui-col-md-offset3">
-                        <label class="layui-form-label">昵称</label>
-                        <div class="layui-input-block">
-                            <input type="nickname" name="nickname" placeholder="昵称" value="{$admin.nickname}" data-rule="required" autocomplete="off" class="layui-input">
-                        </div>
-                    </div>
-                    <div class="layui-form-item layui-col-md6 layui-col-md-offset3">
-                        <label class="layui-form-label">邮箱</label>
-                        <div class="layui-input-block">
-                            <input type="email" name="email" placeholder="邮箱" value="{$admin.email}" autocomplete="off" data-rule="{required;email}" class="layui-input">
-                        </div>
-                    </div>
-                    <div class="layui-form-item layui-col-md6 layui-col-md-offset3">
-                        <label class="layui-form-label">密码</label>
-                        <div class="layui-input-block">
-                            <input type="password" data-rule="passwdrule" data-rule-passwdrule="[/{$passwd_complexity_rule[0]}/, '{$passwd_complexity_rule[1]}']" name="password" placeholder="密码" autocomplete="off" class="layui-input">
-                        </div>
-                    </div>
-                    <div class="layui-form-item layui-col-md6 layui-col-md-offset3">
-                        <label class="layui-form-label">确认密码</label>
-                        <div class="layui-input-block">
-                            <input type="password" name="confirm_password" data-rule="{:__('Confirm password')}:match(password);" placeholder="确认密码"  autocomplete="off" class="layui-input">
-                        </div>
-                    </div>
-                    <div class="layui-form-item layui-col-md6 layui-col-md-offset3">
-                        <label class="layui-form-label">状态</label>
-                        <div class="layui-input-block">
-                            <input type="checkbox" name="status" lay-skin="switch" lay-text="启用|禁止"  {$admin.status == 1? 'checked' : ''}>
-                        </div>
-                    </div>
-                    <div class="layui-form-item layui-col-md-offset3">
-                        <div class="layui-input-block">
-                            <button class="layui-btn" lay-submit="" lay-filter="component-form-element">确实</button>
-                            <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+                    <table class="layui-table" lay-skin="line" lay-size="sm">
+                        <colgroup>
+                            <col class="tdleft" width="30%">
+                            <col class="tdright">
+                        </colgroup>
+                        <tbody>
+                        <tr>
+                            <td class="tdleft">登录账号<span class="tips">*</span></td>
+                            <td class="tdright">
+                                <input type="text" name="username" autocomplete="off" value="{$admin.username}" data-rule="required;username" placeholder="登录账号" class="layui-input">
+                                <input type="hidden" name="id" lay-verify="id" value="{$admin.id}">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="tdleft">昵称</td>
+                            <td class="tdright">
+                                <input type="nickname" name="nickname" placeholder="昵称" value="{$admin.nickname}" data-rule="required" autocomplete="off" class="layui-input">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="tdleft">邮箱</td>
+                            <td class="tdright">
+                                <input type="email" name="email" placeholder="邮箱" value="{$admin.email}" autocomplete="off" data-rule="{required;email}" class="layui-input">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="tdleft">密码</td>
+                            <td class="tdright">
+                                <input type="password" data-rule="passwdrule" data-rule-passwdrule="[/{$passwd_complexity_rule[0]}/, '{$passwd_complexity_rule[1]}']" name="password" placeholder="密码" autocomplete="off" class="layui-input">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="tdleft">确认密码</td>
+                            <td class="tdright">
+                                <input type="password" name="confirm_password" data-rule="{:__('Confirm password')}:match(password);" placeholder="确认密码"  autocomplete="off" class="layui-input">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="tdleft">状态</td>
+                            <td class="tdright">
+                                <input type="checkbox" name="status" lay-skin="switch" lay-text="启用|禁止"  {$admin.status == 1? 'checked' : ''}>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+
+                    <!--<div class="layui-form-item layui-col-md6 layui-col-md-offset3">-->
+                        <!--<label class="layui-form-label">登录账号</label>-->
+                        <!--<div class="layui-input-block">-->
+                            <!--<input type="text" name="username" autocomplete="off" value="{$admin.username}" data-rule="required;username" placeholder="登录账号" class="layui-input">-->
+                            <!--<input type="hidden" name="id" lay-verify="id" value="{$admin.id}">-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="layui-form-item layui-col-md6 layui-col-md-offset3">-->
+                        <!--<label class="layui-form-label">昵称</label>-->
+                        <!--<div class="layui-input-block">-->
+                            <!--<input type="nickname" name="nickname" placeholder="昵称" value="{$admin.nickname}" data-rule="required" autocomplete="off" class="layui-input">-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="layui-form-item layui-col-md6 layui-col-md-offset3">-->
+                        <!--<label class="layui-form-label">邮箱</label>-->
+                        <!--<div class="layui-input-block">-->
+                            <!--<input type="email" name="email" placeholder="邮箱" value="{$admin.email}" autocomplete="off" data-rule="{required;email}" class="layui-input">-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="layui-form-item layui-col-md6 layui-col-md-offset3">-->
+                        <!--<label class="layui-form-label">密码</label>-->
+                        <!--<div class="layui-input-block">-->
+                            <!--<input type="password" data-rule="passwdrule" data-rule-passwdrule="[/{$passwd_complexity_rule[0]}/, '{$passwd_complexity_rule[1]}']" name="password" placeholder="密码" autocomplete="off" class="layui-input">-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="layui-form-item layui-col-md6 layui-col-md-offset3">-->
+                        <!--<label class="layui-form-label">确认密码</label>-->
+                        <!--<div class="layui-input-block">-->
+                            <!--<input type="password" name="confirm_password" data-rule="{:__('Confirm password')}:match(password);" placeholder="确认密码"  autocomplete="off" class="layui-input">-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="layui-form-item layui-col-md6 layui-col-md-offset3">-->
+                        <!--<label class="layui-form-label">状态</label>-->
+                        <!--<div class="layui-input-block">-->
+                            <!--<input type="checkbox" name="status" lay-skin="switch" lay-text="启用|禁止"  {$admin.status == 1? 'checked' : ''}>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <div class="layui-form-item footer-form">
+                        <div class="footer footer-common">
+                            <button class="layui-btn layui-btn-sm" lay-submit="" lay-filter="component-form-element">确实</button>
+                            <button type="reset" class="layui-btn layui-btn-sm">重置</button>
                         </div>
                     </div>
                 </form>
             </div>
-        </div>
-        </div>
-    </div>
-</div>
+        <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
 
 {/block}
 
