--- a/application/admin/view/job/index.html
+++ b/application/admin/view/job/index.html
@@ -15,7 +15,7 @@
 </div>
 
 <!--头工具栏-->
-{:build_toolbar('toolbar',['refresh', 'add', 'del','export', 'import'])}
+{:build_toolbar('toolbar',['refresh', 'add', 'del','export'])}
 <!--头工具栏-->
 
 <!--状态-->
