自定义脚本运行测试

--- a/application/admin/view/push/index.html
+++ b/application/admin/view/push/index.html
@@ -58,6 +58,7 @@
             ,id : 'tableReload'
             ,skin:'line'
             ,toolbar : '#toolbar'
+            ,defaultToolbar: ['filter']
             ,cols: [[
                 {type:'checkbox', fixed: 'left'}
                 ,{field:'id', title: 'ID', sort: true}
