--- a/application/admin/view/job/index.html
+++ b/application/admin/view/job/index.html
@@ -56,6 +56,7 @@
             ,id : 'tableReload'
             ,skin:'line'
             ,toolbar : '#toolbar'
+            ,defaultToolbar: ['filter']
             ,cols: [[
                 {type:'checkbox', fixed: 'left'}
                 ,{field:'id', title: 'ID', sort: true}
