--- a/application/admin/view/database/index.html
+++ b/application/admin/view/database/index.html
@@ -82,7 +82,9 @@
 </div>
 
 <!--头工具栏-->
-{:build_toolbar('toolbar',['refresh','del'])}
+{:build_toolbar('toolbar',['refresh','del'],
+['dumpdata' => ['layui-btn layui-btn-sm', 'layui-icon layui-icon-circle', '数据库备份']]
+)}
 <!--<script type="text/html" id="toolbar">-->
 <!--<div class="layui-btn-container">-->
 <!--<button class="layui-btn layui-btn-sm" lay-event="add"><i class="layui-icon layui-icon-add-1"></i>添加</button>-->
