--- a/application/admin/view/addon/index.html
+++ b/application/admin/view/addon/index.html
@@ -61,12 +61,13 @@
                 {type:'checkbox', fixed: 'left'}
                 ,{field:'id', title: 'ID', sort: true,excel_width:15}
                 ,{field:'name', title: '插件名称',excel_width:15}
+                ,{field:'title', title: '简述',excel_width:15}
                 ,{field:'describe', title: '插件描述', excel_width:150}
                 ,{field:'author', title: '作者', sort: true,excel_width:15}
                 ,{field:'download_count', title: '下载次数', sort: true,excel_width:15}
                 ,{field:'version', title: '版本', sort: true,excel_width:15}
-                ,{field:'status', title: '状态', sort: true,excel_width:15}
-                ,{field:'create_time', title: '创建时间',excel_width:15}
+                ,{field:'status', title: '状态', sort: true,excel_width:15,templet: '#switchStatus', sort: true}
+//                ,{field:'create_time', title: '创建时间',excel_width:15}
                 ,{fixed: 'right', title:'操作', toolbar: '#actionbar', width:150}
             ]]
             ,page: {
@@ -83,6 +84,7 @@
         });
 
         form.on('switch(ruleStatus)', function(obj){
+            console.log(obj);
             layer.tips(this.value + ' ' + this.name + '：'+ obj.elem.checked, obj.othis);
         });
 
