--- a/application/admin/view/addon/index.html
+++ b/application/admin/view/addon/index.html
@@ -94,6 +94,7 @@
         weTable.api.init({
             table : "rule",
             tableid : "tableReload",
+            is_display:true,
             extend : {
                 "add_url": "{:url('admin/Addon/edit','',false)}",
                 "edit_url": "{:url('admin/Addon/edit','',false)}/ids/",
