--- a/application/admin/view/fields/index.html
+++ b/application/admin/view/fields/index.html
@@ -193,8 +193,8 @@
             is_display:true,
             tableCommon: tableCommon,
             extend : {
-                "add_url": "{:url('admin/fields/add','',false)}",
-                "edit_url": "{:url('admin/fields/add','',false)}/ids/",
+                "add_url": "{:url('admin/fields/edit','',false)}",
+                "edit_url": "{:url('admin/fields/edit','',false)}/ids/",
                 "del_url": "{:url('admin/fields/del','',false)}",
                 "export_url" : "{:url('admin/fields/index','',false)}"
             }
